# Class-Widgets-2

./: .git-cliff.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build&release.yml
assets/locales/: en_US.ts  it.ts  ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts
docs/dev/plugin/: api_reference.md  common_issues.md  index.md  sdk_knowledge.md
src/: __init__.py  app.py
src/core/: central.py  directories.py
src/core/automations/: builtin_tasks.py
src/core/config/: model.py
src/core/notification/: manager.py  model.py  provider.py
src/core/plaza/: __init__.py  bridge.py
src/core/plugin/: api.py  components.py  loader.py  manager.py  models.py  worker.py
src/core/themes/: __init__.py  interceptor.py  loader.py  manager.py  worker.py
src/core/utils/: __init__.py  debugger.py  instance_locker.py
src/core/widgets/: core.py  model.py
src/core/windows/: windows.py
src/plugins/cw_widgets/: widgets.py
src/qml/: MainInterface.qml
src/qml/ClassWidgets/Components/: Introduction.qml  Skeleton.qml  Watermark.qml  WidgetLoader.qml  WidgetsContainer.qml  qmldir
src/qml/ClassWidgets/Data/: WhatsNewData.qml  qmldir
src/qml/ClassWidgets/Easing/: BezierCurve.qml  qmldir
src/qml/ClassWidgets/Plugins/: PluginPage.qml  SettingsLayout.qml  qmldir
src/qml/ClassWidgets/Theme/: qmldir
src/qml/Debugger/: EditSchedule.qml  MainWindow.qml  qmldir
src/qml/widgets/: Time.qml  currentActivity.qml  dynamicNotification.qml  eventCountdown.qml  test.qml  upcomingActivities.qml
src/themes/: __init__.py
src/themes/material/js/: Md3Theme.js  (+1 more)
(+54 files in other folders)
