[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "ClassWidgets-2"
dynamic = ["version"]
description = "Class Widgets 2, The Next Class Schedule."
authors = [
    {name = "RinLit",email = "lintusup@foxmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests",
    "PySide6~=6.9.3",
    "RinUI>=0.2.0",
    "pydantic",
    "loguru",
    "pyyaml",
    "packaging"
]

[tool.hatch.version]
path = "src/__init__.py"
match = "__version__ = '([^']+)'"

[tool.hatch.build.targets.wheel]
packages = [
    "src"
]